--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+
+# Created by https://www.gitignore.io/api/osx,sass
+
 ### OSX ###
 *.DS_Store
 .AppleDouble
@@ -5,6 +8,7 @@
 
 # Icon must end with two \r
 Icon
+
 
 # Thumbnails
 ._*
@@ -24,6 +28,12 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+### Sass ###
+.sass-cache/
+*.css.map
+
 
 ### SublimeText ###
 # cache files for sublime text
