--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
+### Gulp & Design ###
+node_modules
+design
+*.psd
 
-# Created by https://www.gitignore.io/api/osx,sass
+### Bower ###
+bower_components
+.bower-cache
+.bower-registry
+.bower-tmp
 
 ### OSX ###
 *.DS_Store
@@ -8,7 +16,6 @@
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
@@ -29,11 +36,9 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-
 ### Sass ###
 .sass-cache/
 *.css.map
-
 
 ### SublimeText ###
 # cache files for sublime text
@@ -58,6 +63,9 @@ Package Control.ca-bundle
 Package Control.system-ca-bundle
 Package Control.cache/
 Package Control.ca-certs/
+Package Control.merged-ca-bundle
+Package Control.user-ca-bundle
+oscrypto-ca-bundle.crt
 bh_unicode_properties.cache
 
 # Sublime-github package stores a github token in this file
