--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
-  "name": "project-title",
+  "name": "html-project-start-kit",
   "version": "1.0.0",
-  "description": "",
   "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "bower": "bower"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "bower": "^1.8.0",
-    "browser-sync": "^2.18.8",
+  "repository": "https://github.com/philip-lu/project-starter-kit.git",
+  "author": "philu <philumailbox@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-clean-css": "^3.2.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-cache": "^0.5.0",
+    "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^3.2.0",
+    "gulp-imagemin": "^3.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sass-bulk-import": "^1.0.1",
-    "gulp-svgmin": "^1.2.3",
-    "gulp-uglify": "^2.1.2",
-    "main-bower-files": "^2.13.1",
+    "gulp-strip-css-comments": "^1.2.0",
+    "gulp-svgmin": "^1.2.4",
+    "gulp-uglify": "^3.0.0",
+    "normalize.css": "^7.0.0",
     "pump": "^1.0.2"
   }
 }
